--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title> :: Laptop :: </title>
+  <title>Laptop</title>
   <!--stylesheet  -->
   <link rel="stylesheet" href="css/style.css">
 </head>
