--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <!--  childb  -->
     <div class="childb">
-      <h2>Laptop Management System</h2>
+      <h2>LAPTOP MANAGEMENT SYSTEM</h2>
       <p>We provide laptops for idea</p>
     </div>
   </header>
